# gossip-maker

./: README.md  pyproject.toml
src/: config.py  generate_content.py  generate_dy_tags.py  generate_keywords.py  main.py  moonshot.py  pick_topic.py  search_top.py  video_act.py  video_maker.py  video_maker_minimax.py  video_maker_svd.py
src/material_maker_comfy/: __init__.py  comfy.py  material_marker.py
src/uploader/: dy.py
src/utils/: request.py
tests/: test_content.py  test_pick_topic.py  test_search_content.py  test_search_top.py  test_upload.py  test_video_maker.py
