[tool.poetry]
name = "gossip-maker"
version = "0.1.0"
description = ""
authors = ["archersado <archersado@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
openai = "^1.47.0"
pydantic = "^2.9.2"
langchain-core = "^0.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"