[tool.poetry]
name = "gossip-maker"
version = "0.1.0"
description = ""
authors = ["archersado <archersado@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
openai = "^1.47.0"
pydantic = "^2.9.2"
langchain-core = "^0.3.5"
stable-diffusion-videos = "^0.9.1"
torch = "^2.4.1"
accelerate = "^0.34.2"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
diffusers = "^0.30.3"
transformers = "^4.45.2"
moviepy = "^1.0.3"
playwright = "^1.48.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"